crates/qwik-optimizer-oxc/tests/snapshots/should_move_props_related_to_iteration_variables_to_var_props.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal } from "@qwik.dev/core";
import { TestComponent } from "./testComponent";

export const Child = component$(() => {
  const propCounterWithNested = useSignal(() => {
    return {
      data: [
        { attributeInArray: { counter: globalThis.propsCounter++ } },
        { attributeInArray: { counter: globalThis.propsCounter } },
      ],
    };
  });
  return (
    <div>
      {propCounterWithNested.value.data.map((item, index) => {
        return (
          <TestComponent
            counter={item.attributeInArray.counter}
            logString="Nested read through array"
            key={index}
          />
        );
      })}
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Child_component_XXXXXXXXXXXX");
export const Child = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Child_component_XXXXXXXXXXXX"),
);

=== test.tsx_Child_component_XXXXXXXXXXXX.js === (ENTRY)
import { TestComponent } from "./testComponent";
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const _hf0 = (p0) => p0.attributeInArray.counter;
const _hf0_str = "p0.attributeInArray.counter";
export const Child_component_XXXXXXXXXXXX = () => {
  const propCounterWithNested = useSignal(() => {
    return {
      data: [
        {
          attributeInArray: {
            counter: globalThis.propsCounter++,
          },
        },
        {
          attributeInArray: {
            counter: globalThis.propsCounter,
          },
        },
      ],
    };
  });
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    propCounterWithNested.value.data.map((item, index) => {
      return /* @__PURE__ */ _jsxSorted(
        TestComponent,
        {
          counter: _fnSignal(_hf0, [item], _hf0_str),
        },
        {
          logString: "Nested read through array",
        },
        null,
        3,
        index,
      );
    }),
    1,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Child_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Child_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Child_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
