crates/qwik-optimizer-oxc/tests/snapshots/should_not_wrap_fn.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal } from "@qwik.dev/core";
import { A } from "./componentA";

export const Cmp = component$(() => {
  const currentStep = useSignal("STEP_1");
  const currentType = useSignal<"NEXT" | "PREVIOUS">("PREVIOUS");

  const getStep = (step: string, type: "NEXT" | "PREVIOUS") => {
    return step === "STEP_1" ? "STEP_2" : "STEP_1";
  };

  return (
    <>
      <button onClick$={() => (currentType.value = "NEXT")}>CLICK</button>
      <A href={getStep(currentStep.value, currentType.value)} />
    </>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Cmp_component_XXXXXXXXXXXX");
export const Cmp = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Cmp_component_XXXXXXXXXXXX"),
);

=== test.tsx_Cmp_component_XXXXXXXXXXXX.js === (ENTRY)
import { A } from "./componentA";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_Cmp_component_Fragment_button_q_e_click_XXXXXXXXXXXX");
export const Cmp_component_XXXXXXXXXXXX = () => {
  const currentStep = useSignal("STEP_1");
  const currentType = useSignal("PREVIOUS");
  const getStep = (step, type) => {
    return step === "STEP_1" ? "STEP_2" : "STEP_1";
  };
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted(
        "button",
        null,
        {
          "q-e:click": /* @__PURE__ */ qrl(
            i_XXXXXXXXXXXX,
            "Cmp_component_Fragment_button_q_e_click_XXXXXXXXXXXX",
            [currentType],
          ),
        },
        "CLICK",
        3,
        null,
      ),
      /* @__PURE__ */ _jsxSorted(
        A,
        {
          href: getStep(currentStep.value, currentType.value),
        },
        null,
        null,
        3,
        "u6_0",
      ),
    ],
    1,
    "u6_1",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Cmp_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Cmp_component_Fragment_button_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const Cmp_component_Fragment_button_q_e_click_XXXXXXXXXXXX = () => {
  const currentType = _captures[0];
  return (currentType.value = "NEXT");
};

/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_Fragment_button_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Cmp_component_Fragment_button_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Cmp_component_Fragment_button_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Cmp_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "currentType"
  ]
}
*/

=== DIAGNOSTICS ===

[]
