crates/qwik-optimizer-oxc/tests/snapshots/should_not_wrap_ternary_function_operator_with_fn.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal } from "@qwik.dev/core";

export default component$(() => {
  const toggle = useSignal(true);
  const t = (key: string) => key;
  return (
    <button
      type="button"
      title={
        toggle.value !== ""
          ? t("app.message.exists@@there is a message for you")
          : t("app.message.not_exists@@click to get a message!")
      }
    ></button>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);

=== test.tsx_test_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
export const test_component_XXXXXXXXXXXX = () => {
  const toggle = useSignal(true);
  const t = (key) => key;
  return /* @__PURE__ */ _jsxSorted(
    "button",
    {
      title:
        toggle.value !== ""
          ? t("app.message.exists@@there is a message for you")
          : t("app.message.not_exists@@click to get a message!"),
    },
    {
      type: "button",
    },
    null,
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
