crates/qwik-optimizer-oxc/tests/snapshots/should_not_wrap_var_template_string.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useComputed$ } from "@qwik.dev/core";
import { inlineTranslate } from "translate-lib";

export default component$(() => {
  const t = inlineTranslate();

  const productTitle = useComputed$(() => {
    return "Test title";
  });

  return (
    <img
      attr={t("home.imageAlt.founded-product:")}
      alt={`${t("home.imageAlt.founded-product:")} ${productTitle.value}`}
    />
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);

=== test.tsx_test_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { inlineTranslate } from "translate-lib";
import { qrl } from "@qwik.dev/core";
import { useComputedQrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_test_component_productTitle_useComputed_XXXXXXXXXXXX");
export const test_component_XXXXXXXXXXXX = () => {
  const t = inlineTranslate();
  const productTitle = useComputedQrl(
    /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_productTitle_useComputed_XXXXXXXXXXXX"),
  );
  return /* @__PURE__ */ _jsxSorted(
    "img",
    {
      alt: `${t("home.imageAlt.founded-product:")} ${productTitle.value}`,
      attr: t("home.imageAlt.founded-product:"),
    },
    null,
    null,
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_test_component_productTitle_useComputed_XXXXXXXXXXXX.js === (ENTRY)
export const test_component_productTitle_useComputed_XXXXXXXXXXXX = () => {
  return "Test title";
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_productTitle_useComputed_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component_productTitle_useComputed",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_productTitle_useComputed_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useComputed$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
